src/assets/css/default.css
@import 'default/dark.css';

:root {
    --lineHeight: 1.4285;
    --wishPreviewHeight: min(30vh, 224px);
}

html {
    scroll-behavior: smooth;
}

img,
svg {
    max-width: 100%;
}

figure {
    margin: 0 0 1em;
}

/**
 * Logo
 */
.ui.menu .item.home > :is(img, svg):not(.ui) {
    width: auto;
    height: 1em;
    margin: 0;
}
#logo {
    color: inherit;
}
#logo path {
    fill: currentColor;
}

/**
 * Footer
 */
.ui.footer {
    position: sticky;
    top: 100%;

    min-height: 15vh;
}
@media (min-width: 768px) {
    .ui.footer {
        padding-top: 2em;
        padding-bottom: 2em;
    }
}

.ui.vertical.menu.sidebar .ui.footer {
    position: static;
}

/**
 * Progress
 */
.ui.progress.nolabel:last-child {
	margin: 0;
}

/**
 * Wishlist Card
 */
.wishlist .ui.card {
    --padding: 0.91666667em;
    --buttonsHeight: calc(0.75em * 2 + 1em + 2 * var(--padding) - 2px);
}

.wishlist .ui.fluid.card.stretch {
    height: 100%;
}

/** Image */
.wishlist .ui.card > .image > svg {
    width: 100%;
    height: var(--wishPreviewHeight);

    color: #f0f0f0;
    background-color: #f4f4f4;

    box-sizing: border-box;
    border-radius: inherit;
}
.wishlist .ui.card > .image > svg#no-image {
    padding: 15% 10%;
}
@media (prefers-color-scheme: dark) {
    svg,
    .wishlist .ui.card > .image > svg {
        color: #0f0f0f;
        background-color: #0b0b0b;
    }
}
@media (hover: hover) {
    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .image > svg {
            transition: 0.2s linear height,
                        0.2s linear padding,
                        0.2s linear opacity;
        }
    }
    .wishlist .ui.card:hover > .image > svg {
        height: calc(1em + 3 * var(--padding) - 5px);
        padding: 0 !important;
        opacity: 0;
    }
}

.wishlist .ui.card > .image > img.preview {
    height: var(--wishPreviewHeight);

    object-fit: cover;
    object-position: 50%;
    background-color: #fff;
}
@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .image > img.preview {
        filter: brightness(80%);
        background-color: #000;
    }
}
@media (hover: hover) {
    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .image > img.preview {
            transition: 0.2s linear height,
                        0.2s linear opacity;
        }
    }
    .wishlist .ui.card:hover > .image > img.preview {
        height: calc(1em + 3 * var(--padding));
    }
}

/** Provider */
.wishlist .ui.card > .image,
.wishlist .ui.card > .image > span.provider {
    border-radius: .33333333rem .33333333rem 0 0;
}

.wishlist .ui.card > .image > img.favicon,
.wishlist .ui.card > .image > span.provider {
    position: absolute;
    top: 0;
}

/** Favicon */
.wishlist .ui.card > .image > img.favicon {
    padding: calc(var(--padding) * 1.5) var(--padding);

    height: 1.25em;
    width: auto;

    box-sizing: content-box;
    z-index: 1;
}
@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .image > img.favicon {
        filter: brightness(80%);
    }
}

.wishlist .ui.card > .image > img.favicon + span.provider {
    padding-left: 3em;
}

/** Provider name */
.wishlist .ui.card > .image > span.provider {
    display: block;
    width: 100%;
    padding: calc(var(--padding) * 1.5) var(--padding);

    line-height: 1;
    user-select: none;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    background-color: rgba(255, 255, 255, 0.6);
    backdrop-filter: blur(4px);
}
@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .image > span.provider {
        background-color: rgba(0, 0, 0, 0.6);
    }
}
@supports (backdrop-filter: blur(4px)) {
    .wishlist .ui.card > .image > span.provider {
        background-color: rgba(255, 255, 255, 0.2);
        backdrop-filter: blur(4px);
    }
    @media (prefers-color-scheme: dark) {
        .wishlist .ui.card > .image > span.provider {
            background-color: rgba(0, 0, 0, 0.2);
        }
    }
}
@media (hover: hover) {
    .wishlist .ui.card > .image > span.provider {
        position: absolute;

        opacity: 0;
    }
    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .image > span.provider {
            transition: opacity 0.2s linear;
        }
    }

    .wishlist .ui.card:hover > .image > span.provider {
        display: block;

        opacity: 1;
    }
}

/** Content */
.wishlist .ui.card > .content:not(.extra) {
    height: calc(0.75 * var(--wishPreviewHeight));

    overflow: auto;
}
@media (hover: hover) {
    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .content:not(.extra) {
            transition: 0.2s linear height,
                        0.2s linear margin-bottom;
        }
    }
    .wishlist .ui.card > .content:not(.extra) {
        overflow: hidden;
    }

    .wishlist .ui.card:hover > .content:not(.extra) {
        height: calc(1.5 * var(--wishPreviewHeight) - var(--buttonsHeight) - 4px);
        margin-bottom: var(--buttonsHeight);

        overflow: auto;
    }
}

.wishlist .ui.card > .content > .header {
    max-height: calc(2 * 1.28571429em);
    overflow: hidden;
}

.wishlist .ui.card > .content > .description-fade {
    position: absolute;
    right: 0;
    bottom: 0;
    left: 0;

    height: 4em;
    width: 100%;
    background-image: linear-gradient(0deg, rgba(255, 255, 255, 1) 0.75em, rgba(255, 255, 255, 0.9) 45%, rgba(255, 255, 255, 0) 100%);
    border-radius: 0.33333333rem;
}
@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .content > .description-fade {
        background-image: linear-gradient(0deg, rgba(0, 0, 0, 1) 0.75em, rgba(0, 0, 0, 0.9) 45%, rgba(0, 0, 0, 0) 100%);
    }
}

/** Buttons */
.wishlist .ui.card > .extra.buttons {
    display: flex;
    align-items: center;

    background-color: inherit;
    z-index: 2;
}
@media (hover: hover) {
    .wishlist .ui.card > .extra.buttons {
        position: absolute;
        top: unset;
        right: 0;
        bottom: calc(var(--buttonsHeight) / 2);
        left: 0;
        height: auto;

        opacity: 0;
        margin-bottom: 0;
    }
    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .extra.buttons {
            transition: 0.2s ease opacity,
                        0.2s ease bottom;
        }
    }

    .wishlist .ui.card:hover > .extra.buttons {
        opacity: 1;

        bottom: 0;
    }
}

.wishlist .ui.card > .extra.buttons > .button {
    flex: 1 1 auto;
}
.wishlist .ui.card > .extra.buttons > :last-child {
    margin-right: 0;
}

/**
 * Label
 */
p .ui.horizontal.label {
    margin: 0;
    cursor: default;
    user-select: none;
}

/**
 * Flex
 */
.flex {
    display: flex;
    flex-flow: row wrap;
}
@media (max-width: 767px) {
    .flex {
        flex-direction: column;
    }

    .flex > *,
    .flex > .ui.button {
        margin-bottom: 0.5rem;
    }
    .flex :last-child {
        margin-bottom: 0;
    }
}

/**
 * Menu
 */
.pusher {
    min-height: 100vh;
}

.pusher .menu.toggle {
    display: none;
}

.ui.attached.menu.sidebar:not(.tabular) {
    border: 0;
}

.ui.vertical.menu .footer .item > i.icon,
.ui.vertical.menu .footer .item > i.icons {
    float: none;
    margin: 0;
}

@media (max-width: 767px) {
    .pusher .menu.toggle {
        display: block;
    }

    .pusher .menu.attached.desktop {
        display: none;
    }
}

/**
 * Action Input
 */
.ui.action.input > .action.input > input {
    flex-shrink: 1;
    width: 100%;
}

@media (max-width: 400px) {
    .ui.action.input {
        flex-direction: column;
    }

    .ui.action.input > input {
        border-radius: 0.33333333rem 0.33333333rem 0 0 !important;
        border: 1px solid rgba(34,36,38,.15) !important;
    }

    .ui.action.input > .button:last-child,
    .ui.action.input > .buttons:last-child > .button,
    .ui.action.input > .dropdown:last-child {
        border-radius: 0 0 0.33333333rem 0.33333333rem !important;
    }
}

/**
 * Options
 */
.ui.dropdown.options {
    text-align: center;
}

.ui.dropdown .menu > a.item,
.ui.dropdown .menu > a.item:hover {
	color: rgba(0,0,0,.95);
}

/**
 * Filter
 */
.ui.basic.white.button {
    color: inherit;
    background-color: #fff;
}
@media (prefers-color-scheme: dark) {
    .ui.basic.white.button {
        background-color: #000;
    }
}

/**
 * List
 */
ul.ui.list li::before {
    display: none;
}

ul.ui.list {
	margin: 0;
}

/**
 * Dropdown
 */
button.item {
    width: 100%;

    background-color: transparent;
}

